<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fff"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backbt"
        android:layout_width="17dp"
        android:layout_height="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:paddingTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_ico" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="90dp"
        android:layout_height="97dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="68dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_alpha" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/bold"
        android:text="Development by"
        android:textColor="#B1B0B0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"

        android:fontFamily="@font/bold"
        android:textColor="#B1B0B0"
        android:text="Design by"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Naman Dureja"
        android:fontFamily="@font/bold"
        android:textColor="#F5AF76"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Manan Dua"
        android:fontFamily="@font/bold"
        android:textSize="18sp"

        android:textColor="#F5AF76"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/bold"
        android:text="Frequently asked questions"
        android:textColor="#F5AF76"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="15dp"

        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:overScrollMode="never"
        tools:layout_editor_absoluteX="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/semibold"
            android:text="@string/q1"
            android:textColor="#000"
            android:textSize="18sp"
            />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lght"
            android:layout_marginTop="5dp"
            android:text="@string/carbon"
            android:textColor="#000"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/link1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lght"
            android:text="@string/link1"
            android:textStyle="italic"
            android:textColor="#F68F3B"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/link2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lght"
            android:text="@string/link2"
            android:textColor="#F68F3B"
            android:textStyle="italic"

            android:textSize="13sp" />

            <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/semibold"
            android:text="@string/q2"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lght"
            android:text="@string/ans2"
            android:textColor="#000"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/semibold"
            android:text="@string/q3"
            android:textColor="#000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/lght"
            android:text="@string/ans3"
            android:textColor="#000"
            android:textSize="18sp" />
            <TextView
                android:id="@+id/link3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/lght"
                android:text="@string/link3"
                android:textColor="#F68F3B"
                android:textStyle="italic"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/med"
        android:text="Back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/backbt"
        app:layout_constraintStart_toEndOf="@+id/backbt"
        app:layout_constraintTop_toTopOf="@+id/backbt" />

</androidx.constraintlayout.widget.ConstraintLayout>